# serializer version: 1
# name: TestInstitutionEmailFactory.test_close_notifies_when_siae_has_negative_result[refused result email]
  '''
  Bonjour,
  
  Vous trouverez ci-après le résultat du contrôle a posteriori sur vos auto-prescriptions réalisées entre le 23 Octobre 2022 et le 23 Décembre 2022.
  
  La DDETS 01 a vérifié les nouveaux justificatifs transmis par votre structure EI les petits jardins ID-1000 dans le cadre de la phase contradictoire du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 23 Octobre 2022 et le 23 Décembre 2022.
  
  Un ou plusieurs de vos justificatifs n’ont pas été validés par conséquent votre résultat concernant cette procédure est négatif (vous serez alerté des sanctions éventuelles concernant votre SIAE prochainement) conformément à l’instruction N° DGEFP/SDPAE/MIP/2022/83 du 5 avril 2022 relative à la mise en œuvre opérationnelle du contrôle a posteriori des recrutements en auto-prescription prévu par les articles R. 5132-1-12 à R. 5132-1-17 du code du travail.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://127.0.0.1:8000
  '''
# ---
# name: TestInstitutionEmailFactory.test_close_notifies_when_siae_has_negative_result[sanction notification email]
  '''
  Bonjour,
  
  Suite au dernier contrôle a posteriori, une ou plusieurs SIAE de votre département ont obtenu un résultat négatif.
  Conformément au  Décret n° 2021-1128 du 30 août 2021 relatif à l'insertion par l'activité économique, les manquements constatés ainsi que les sanctions envisagées doivent être notifiés aux SIAE.
  
  Veuillez vous connecter sur votre espace des emplois de l’inclusion afin d’effectuer cette démarche.
  http://127.0.0.1:8000/siae_evaluation/institution_evaluated_siae_list/1/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://127.0.0.1:8000
  '''
# ---
# name: TestInstitutionEmailFactory.test_close_notify_when_siae_has_positive_result_in_adversarial_phase[accepted result email]
  '''
  Bonjour,
  
  La DDETS 01 a validé la conformité des nouveaux justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 07 Mars 2023 et le 07 Mai 2023.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI les petits jardins ID-1000.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://127.0.0.1:8000
  '''
# ---
